# combined-approach

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build-server.sh  frames.gv  package.xml  setup.cfg
combined_approach/: robot_interface_node.py
include/: RobotInterfaceNode.h
launch/: demo.launch.py  py_demo.launch.py
python/: Get_Obstacles.py  RobotArmAvoidance.sublime-workspace  angular_ds.py  arrow_publisher.py  attractor_publisher.py  avoidance_publisher.py  avoider.py  basic_marker.py  debug_velocity_publisher.py  evaluator.py  frames.gv  franka_robot_base.py  franka_robot_publisher.py  franka_robot_publisher_1CP.py  franka_robot_publisher_1CP_large.py  franka_robot_publisher_small_CP.py  joint_space_controller.py  main_controller.py  main_executor.py  main_listener.py  main_publisher.py  marker_array.py  obstacle_avoidance.py  obstacle_publisher.py  obstacles_environment.py  octahedron.stl  pose_publisher.py  publisher_simple.py  robot_arm_avoider.py  robot_controller.py  test.py  wrench_publisher.py  wrench_publisher2.py
python/tests/: test_robot_avoider.py  test_single_obstacle_3d.py
scripts/: cartesian_twist_control.cpp  joint_space_position_control.cpp  joint_space_velocity_control.cpp  simple_arm_movement.py
src/: RobotInterfaceNode.cpp
