<package format="3">
  <name>combined_approach</name>
  <version>0.0.1</version>
  <description>Control loop with control libraries for ROS2</description>
  <maintainer email="dominic.reber@epfl.ch">"Dominic Reber"</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
